[package]
name = "adler32"
version = "1.0.4"
authors = ["Remi Rampin <remirampin@gmail.com>"]
description = "Minimal Adler32 implementation for Rust."
documentation = "https://remram44.github.io/adler32-rs/index.html"
repository = "https://github.com/remram44/adler32-rs"
readme = "README.md"
keywords = ["adler32", "hash", "rolling"]
license = "Zlib"
edition = "2018"

[dev-dependencies]
#rand = "0.4"

[features]
default = ["mesalock_sgx"]
mesalock_sgx = ["sgx_tstd"]
enclave_unit_test = ["rand", "sgx_tunittest"]

[dependencies]
sgx_tstd        = { git = "https://github.com/apache/incubator-teaclave-sgx-sdk.git", tag = "v1.1.1", optional = true }
sgx_tunittest   = { git = "https://github.com/apache/incubator-teaclave-sgx-sdk.git", tag = "v1.1.1", optional = true }

[dependencies.rand]
package = "sgx_rand"
git = "https://github.com/apache/incubator-teaclave-sgx-sdk.git"
optional = true
tag = "v1.1.1"

