[package]
name = "slog-async"
version = "2.5.0"
authors = ["Dawid Ciężarkiewicz <dpc@dpc.pw>"]
description = "Asynchronous drain for slog-rs"
keywords = ["slog", "logging", "log", "asynchronous"]
categories = ["development-tools::debugging"]
license = "MPL-2.0/MIT/Apache-2.0"
documentation = "https://docs.rs/slog-async"
homepage = "https://github.com/slog-rs/slog"
repository = "https://github.com/slog-rs/async"
readme = "README.md"

[features]
nested-values = ["slog/nested-values"]
dynamic-keys = ["slog/dynamic-keys"]
default = ["mesalock_sgx"]
mesalock_sgx = ["sgx_tstd"]
[lib]
path = "lib.rs"

[dependencies]
slog = { path = "../slog" }
thread_local = { path = "../thread_local-rs" }
take_mut = { path = "../take_mut" }
crossbeam-channel = { path = "../crossbeam/crossbeam-channel" }
sgx_tstd = { git = "https://github.com/apache/incubator-teaclave-sgx-sdk.git", tag = "v1.1.2", optional = true }
[package.metadata.docs.rs]
features = ["nested-values", "dynamic-keys"]
