[package]
name = "byteorder"
version = "1.3.4"  #:version
authors = ["Andrew Gallant <jamslam@gmail.com>"]
description = "Library for reading/writing numbers in big-endian and little-endian."
documentation = "https://docs.rs/byteorder"
homepage = "https://github.com/BurntSushi/byteorder"
repository = "https://github.com/BurntSushi/byteorder"
readme = "README.md"
categories = ["encoding", "parsing"]
keywords = ["byte", "endian", "big-endian", "little-endian", "binary"]
license = "Unlicense OR MIT"
exclude = ["/ci/*", "/sgx/*"]
build = "build.rs"

[lib]
name = "byteorder"
bench = false

[dev-dependencies]
#quickcheck = { version = "0.8", default-features = false }
#rand = "0.6"

[features]
default = ["std","mesalock_sgx"]
std = ["mesalock_sgx"]
mesalock_sgx = ["std", "sgx_tstd"]
enclave_unit_test = ["crates_unittest", "inventory", "quickcheck", "rand"]
# This feature is no longer used and is DEPRECATED. This crate now
# automatically enables i128 support for Rust compilers that support it. The
# feature will be removed if and when a new major version is released.
i128 = []

[dependencies]
sgx_tstd = { git = "https://github.com/apache/incubator-teaclave-sgx-sdk.git", tag = "v1.1.2", optional = true }
crates_unittest = { git = "https://github.com/Zha0Chan/crates-sgx-unittest.git", optional = true, default-features = false }
inventory = { version = "0.1.6", optional = true }
quickcheck = { path = "../quickcheck", optional = true }
rand = { path = "../rand-0.7.3", optional = true }
[profile.bench]
opt-level = 3
