[package]
name = "serde_cbor"
version = "0.11.1"
authors = [
    "Pyfisch <pyfisch@gmail.com>",
    "Steven Fackler <sfackler@gmail.com>"]
repository = "https://github.com/pyfisch/cbor"
readme = "README.md"
license = "MIT/Apache-2.0"
description = "CBOR support for serde."
keywords = ["serde", "cbor", "serialization", "no_std"]
categories = ["encoding"]
edition = "2018"

[badges]
travis-ci = { repository = "pyfisch/cbor" }
maintenance = { status = "passively-maintained" }

[dependencies]
half = "1.2.0"
serde = { git = "https://github.com/universal-secure-computing-community/crates-sgx.git", tag = "v0.3.1+sgx1.1.2", features = ["derive"] }
sgx_tstd = { git = "https://github.com/apache/incubator-teaclave-sgx-sdk.git", tag = "v1.1.2", optional = true }

[dev-dependencies]
#serde_derive = { version = "1.0.14", default-features = false }

[features]
# Uses `alloc` library and adds support for vector functions with
# `no_std`.
default = ["std", "mesalock_sgx"]
alloc = ["serde/alloc"]
std = ["serde/std", "mesalock_sgx"]
mesalock_sgx = ["sgx_tstd"]
unsealed_read_write = []
tags = []
