[package]
name = "color_quant"
license = "MIT"
version = "1.0.1"
authors = ["nwin <nwin@users.noreply.github.com>"]
readme = "README.md"
description = "Color quantization library to reduce n colors to 256 colors."
repository = "https://github.com/PistonDevelopers/color_quant.git"
edition = "2018"

[features]
default = ["mesalock_sgx"]
mesalock_sgx = ["sgx_tstd"]
enclave_unit_test = ["sgx_tunittest"]

[dependencies]
sgx_tstd        = { git = "https://github.com/apache/incubator-teaclave-sgx-sdk.git", tag = "v1.1.2", optional = true }
sgx_tunittest   = { git = "https://github.com/apache/incubator-teaclave-sgx-sdk.git", tag = "v1.1.2", optional = true }
