[package]
name = "env_logger"
edition = "2018"
version = "0.7.1" # remember to update html_root_url
authors = ["The Rust Project Developers"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/sebasmagri/env_logger/"
documentation = "https://docs.rs/env_logger"
description = """
A logging implementation for `log` which is configured via an environment
variable.
"""
categories = ["development-tools::debugging"]
keywords = ["logging", "log", "logger"]

[workspace]
members = [
    "ci"
]
exclude = ["sgx-tests"]
[dependencies]
log = { git = "https://github.com/universal-secure-computing-community/crates-sgx.git", tag = "v0.3.1+sgx1.1.2", features = ["std"] }
regex = { version = "1.0.3", optional = true, path = "../regex", features=["std", "perf"] }
termcolor = { version = "1.0.5", optional = true, path = "../termcolor" }
humantime = { optional = true, path = "../humantime" }
#atty = { version = "0.2.5", optional = true }
sgx_tstd = { git = "https://github.com/apache/incubator-teaclave-sgx-sdk.git", tag = "v1.1.2", optional = true }

crates_unittest = { git = "https://github.com/Zha0Chan/crates-sgx-unittest.git", optional = true, default-features = false }
inventory = { version = "0.1.6", optional = true }
[[test]]
name = "regexp_filter"
harness = false

[[test]]
name = "log-in-log"
harness = false

[[test]]
name = "log_tls_dtors"
harness = false

[[test]]
name = "init-twice-retains-filter"
harness = false

[features]
default = ["termcolor", "humantime", "regex", "mesalock_sgx"]
mesalock_sgx = ["sgx_tstd"]
enclave_unit_test = ["crates_unittest", "inventory"]