[package]
name = "futures"
version = "0.1.29"
authors = ["Alex Crichton <alex@alexcrichton.com>"]
license = "MIT/Apache-2.0"
readme = "README.md"
keywords = ["futures", "async", "future"]
repository = "https://github.com/rust-lang-nursery/futures-rs"
homepage = "https://github.com/rust-lang-nursery/futures-rs"
documentation = "https://docs.rs/futures"
description = """
An implementation of futures and streams featuring zero allocations,
composability, and iterator-like interfaces.
"""
categories = ["asynchronous"]

[badges]
travis-ci = { repository = "rust-lang-nursery/futures-rs" }
appveyor = { repository = "rust-lang-nursery/futures-rs" }

[dependencies]
sgx_tstd = { git = "https://github.com/apache/incubator-teaclave-sgx-sdk.git", tag = "v1.1.2", optional = true, features = ["thread", "untrusted_time"] }

[features]
nightly = []
use_std = ["mesalock_sgx"]
with-deprecated = []
default = ["use_std", "with-deprecated", "mesalock_sgx"]
mesalock_sgx = ["sgx_tstd", "use_std"]

[workspace]
members = ["futures01", "futures-cpupool"]
exclude = ["sgx-tests"]
