[package]
name = "instant"
version = "0.1.4"
authors = ["sebcrozet <developer@crozet.re>"]
description = "A partial replacement for std::time::Instant that works on WASM too."
repository = "https://github.com/sebcrozet/instant"
readme = "README.md"
license = "BSD-3-Clause"
keywords = [ "time", "wasm" ]
edition = "2018"

[lib]
#crate-type = ["cdylib", "rlib"]
crate-type = ["rlib"]

[features]
default = ["mesalock_sgx"]
mesalock_sgx = ["sgx_tstd"]
now = [ "time" ]
wasm-bindgen = ["js-sys", "wasm-bindgen_rs", "web-sys"]

[dependencies]
sgx_tstd = { git = "https://github.com/apache/incubator-teaclave-sgx-sdk.git", tag = "v1.1.2", optional = true, features = ["untrusted_time"] }


[target.'cfg(not(any(feature = "stdweb", feature = "wasm-bindgen")))'.dependencies]
#time = { version = "0.1", optional = true }
time = { path = "../time-0.1", version = "0.1", optional = true }

[target.wasm32-unknown-unknown.dependencies]
js-sys = { version = "0.3", optional = true }
stdweb = { version = "0.4", optional = true }
wasm-bindgen_rs = { package = "wasm-bindgen", version = "0.2", optional = true }
web-sys = { version = "0.3", optional = true, features = ['Window', 'Performance', 'PerformanceTiming'] }

[target.wasm32-unknown-emscripten.dependencies]
js-sys = { version = "0.3", optional = true }
stdweb = { version = "0.4", optional = true }
wasm-bindgen_rs = { package = "wasm-bindgen", version = "0.2", optional = true }
web-sys = { version = "0.3", optional = true, features = ['Window', 'Performance', 'PerformanceTiming'] }

[target.asmjs-unknown-emscripten.dependencies]
js-sys = { version = "0.3", optional = true }
stdweb = { version = "0.4", optional = true }
wasm-bindgen_rs = { package = "wasm-bindgen", version = "0.2", optional = true }
web-sys = { version = "0.3", optional = true, features = ['Window', 'Performance', 'PerformanceTiming'] }

[dev-dependencies]
wasm-bindgen-test = "0.2"
