[package]
name = "integer-encoding"
version = "1.0.7"
authors = ["Lewin Bormann <lbo@spheniscida.de>"]
description = "varint+zigzag and fixedint integer encoding/decoding (https://developers.google.com/protocol-buffers/docs/encoding)"
repository = "https://github.com/dermesser/integer-encoding-rs"
documentation = "https://docs.rs/integer-encoding/"
license-file = "LICENSE"
keywords = ["integer", "varint", "zigzag", "protobuf", "serialize"]
edition = "2018"

[dependencies]
sgx_tstd        = { git = "https://github.com/apache/incubator-teaclave-sgx-sdk.git", tag = "v1.1.1", optional = true }
sgx_tunittest   = { git = "https://github.com/apache/incubator-teaclave-sgx-sdk.git", tag = "v1.1.1", optional = true }

[features]
default = ["mesalock_sgx"]
mesalock_sgx = ["sgx_tstd"]
enclave_unit_test = ["sgx_tunittest"]