[package]
name = "iovec"
version = "0.1.4"
authors = ["Carl Lerche <me@carllerche.com>"]
license = "MIT/Apache-2.0"
readme = "README.md"
keywords = ["scatter", "gather", "vectored", "io", "networking"]
repository = "https://github.com/carllerche/iovec"
homepage = "https://github.com/carllerche/iovec"
documentation = "https://docs.rs/iovec"
description = """
Portable buffer type for scatter/gather I/O operations
"""
categories = ["network-programming", "api-bindings"]
exclude = ["/sgx/*"]

[target.'cfg(not(target_env = "sgx"))'.dependencies]
sgx_libc   = { git = "https://github.com/apache/incubator-teaclave-sgx-sdk.git", tag = "v1.1.2" }
