[package]
name = "itertools"
version = "0.9.0"

license = "MIT/Apache-2.0"
repository = "https://github.com/bluss/rust-itertools"
documentation = "https://docs.rs/itertools/"
authors = ["bluss"]

description = "Extra iterator adaptors, iterator methods, free functions, and macros."

keywords = ["iterator", "data-structure", "zip", "product", "group-by"]
categories = ["algorithms", "rust-patterns"]
exclude = ["/bors.toml"]

edition = "2018"

[package.metadata.release]
no-dev-version = true

[lib]
bench = false
test = false

[dependencies]
either = { git = "https://github.com/universal-secure-computing-community/crates-sgx.git", tag = "v0.3.0+sgx1.1.2", default-features = false }
sgx_tstd = { git = "https://github.com/apache/incubator-teaclave-sgx-sdk.git", tag = "v1.1.2", optional = true }

[dev-dependencies]
rand = "0.7"
criterion = "=0.3.0" # TODO update criterion version once it becomes compatible with our minimum required Rust verision or bump minimum required rust version

[dev-dependencies.quickcheck]
version = "0.9"
default-features = false

[dev-dependencies.permutohedron]
version = "0.2"

[features]
default = ["use_std"]
use_std = ["mesalock_sgx"]
mesalock_sgx = [
  "sgx_tstd",
]

[profile]
bench = { debug = true }

[[bench]]
name = "tuple_combinations"
harness = false

[[bench]]
name = "tuples"
harness = false

[[bench]]
name = "fold_specialization"
harness = false

[[bench]]
name = "combinations_with_replacement"
harness = false

[[bench]]
name = "tree_fold1"
harness = false

[[bench]]
name = "bench1"
harness = false
