[package]
name = "itoa"
version = "0.4.5" # remember to update html_root_url
authors = ["David Tolnay <dtolnay@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Fast functions for printing integer primitives to an io::Write"
repository = "https://github.com/dtolnay/itoa"
documentation = "https://github.com/dtolnay/itoa"
categories = ["value-formatting"]
readme = "README.md"
exclude = ["performance.png"]

[features]
default = ["std", "mesalock_sgx"]
i128 = []
std = []
mesalock_sgx = ["sgx_tstd"]

[dependencies]
sgx_tstd = { git = "https://github.com/apache/incubator-teaclave-sgx-sdk", tag = "v1.1.1", optional = true }

[badges]
travis-ci = { repository = "dtolnay/itoa" }
